--- a/package.json
+++ b/package.json
@@ -1,14 +1,32 @@
 {
-  "name": "fumbling-force",
+  "name": "permanent-site",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "preview": "wrangler dev",
+    "astro": "astro",
+    "typecheck": "astro check",
+    "cf-typegen": "wrangler types",
+    "format": "prettier . --write",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "astro": "^5.13.7"
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/cloudflare": "^12.6.5",
+    "@astrojs/ts-plugin": "^1.10.4",
+    "typescript": "^5.9.2"
+  },
+  "devDependencies": {
+    "@types/node": "^24.3.0",
+    "@typescript-eslint/parser": "^8.41.0",
+    "eslint": "^9.34.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "prettier": "3.6.2",
+    "prettier-plugin-astro": "0.14.1",
+    "vite-plugin-svgr": "^4.5.0",
+    "wrangler": "^4.32.0"
   }
 }
