--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "@astrojs/react": "^4.3.1",
     "@types/node": "^24.3.0",
     "@typescript-eslint/parser": "^8.41.0",
     "eslint": "^9.34.0",
@@ -26,6 +27,8 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "prettier": "3.6.2",
     "prettier-plugin-astro": "0.14.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "vite-plugin-svgr": "^4.5.0",
     "wrangler": "^4.32.0"
   }
