--- a/.github/workflows/cloudflare-pages.yaml
+++ b/.github/workflows/cloudflare-pages.yaml
@@ -11,6 +11,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build
+
       - name: Deploy to Cloudflare Pages
         id: deploy
         uses: cloudflare/pages-action@v1
@@ -18,6 +30,7 @@ jobs:
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }} # <-- あなたのアカウントID
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           projectName: takum1-me # <-- あなたのプロジェクト名
+          directory: dist
           branch: ${{ github.head_ref }}
 
       - name: Post preview URL to PR
