--- a/.github/workflows/cloudflare-pages.yaml
+++ b/.github/workflows/cloudflare-pages.yaml
@@ -22,6 +22,9 @@ jobs:
 
       - name: Build
         run: npm run build
+        env:
+          MICROCMS_API_URL: ${{ secrets.MICROCMS_API_URL }}
+          MICROCMS_API_KEY: ${{ secrets.MICROCMS_API_KEY }}
 
       - name: Deploy to Cloudflare Pages
         id: deploy
