--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,6 @@
 name = "takum1-me"
-main = "workers-site/index.js"
 compatibility_date = "2024-09-23"
-
-[site]
-bucket = "dist"
+pages_build_output_dir = "dist"
 
 [[routes]]
 pattern = "takum1.me/*"
