--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,10 +2,10 @@ name = "takum1-me"
 compatibility_date = "2024-09-23"
 pages_build_output_dir = "dist"
 
-[[routes]]
-pattern = "takum1.me/*"
-zone_name = "takum1.me"
+# プレビュー環境の設定
+[env.preview]
+name = "takum1-me-preview"
 
-# 開発用の設定
-[env.development]
-name = "takum1-me-dev"
+# 本番環境の設定
+[env.production]
+name = "takum1-me"
