--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
-    "preview": "wrangler dev",
+    "preview": "wrangler pages dev",
     "astro": "astro",
     "typecheck": "astro check",
     "cf-typegen": "wrangler types",
