--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cf-typegen": "wrangler types",
     "format": "prettier . --write",
     "format:check": "prettier . --check",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "check-all": "npm run typecheck && npm run format && npm run lint"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
