--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format": "prettier . --write",
     "format:check": "prettier . --check",
     "lint": "eslint .",
-    "c-all": "npm run typecheck && npm run format && npm run lint"
+    "c-all": "npm run typecheck && npm run format && npm run lint",
+    "prepare": "husky"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -28,6 +29,8 @@
     "eslint": "^9.34.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.3",
     "prettier": "3.6.2",
     "prettier-plugin-astro": "0.14.1",
     "react": "^19.1.1",
