--- a/.github/workflows/auto-deploy-note.yaml
+++ b/.github/workflows/auto-deploy-note.yaml
@@ -6,7 +6,7 @@ name: Auto Deploy Note Articles
 on:
   schedule:
     # 毎時0分に実行（必要に応じて調整可能）
-    - cron: '0 * * * *'
+    - cron: "0 * * * *"
   workflow_dispatch: # 手動実行も可能
 
 jobs:
@@ -17,8 +17,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
       - run: npm ci
       - run: npm run build
         env:
@@ -29,4 +29,23 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
