--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,20 @@
 {
   "extends": "stylelint-config-standard",
   "rules": {
+    "at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": [
+          "tailwind",
+          "apply",
+          "variants",
+          "responsive",
+          "screen",
+          "theme",
+          "import"
+        ]
+      }
+    ],
     "comment-empty-line-before": [
       "always",
       {
@@ -55,6 +69,7 @@
     "media-feature-name-no-vendor-prefix": true,
     "at-rule-no-vendor-prefix": true,
     "media-feature-range-notation": "context",
-    "number-max-precision": 4
+    "number-max-precision": 4,
+    "import-notation": null
   }
 }
