--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   },
   "devDependencies": {
     "@astrojs/react": "^4.3.1",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/node": "^24.3.0",
     "@typescript-eslint/parser": "^8.41.0",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9.34.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -41,6 +43,7 @@
     "react-dom": "^19.1.1",
     "stylelint": "^16.25.0",
     "stylelint-config-standard": "^39.0.1",
+    "tailwindcss": "^4.0.0",
     "vite-plugin-svgr": "^4.5.0",
     "wrangler": "^4.32.0"
   }
